# socketshark

./: .gitignore  CHANGELOG.md  README.rst  circle.yml  example_config.py  pyproject.toml  requirements.txt  requirements_lint.txt  requirements_prometheus.txt  requirements_tests.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  test.yaml
socketshark/: __init__.py  __main__.py  config_defaults.py  constants.py  events.py  exceptions.py  receiver.py  redis_connection.py  session.py  subscription.py  types.py  utils.py
socketshark/backend/: websockets.py
socketshark/metrics/: __init__.py  log.py  prometheus.py
tests/: test_basic.py  test_metrics.py  test_utils.py
